# surfaceRegistration

./: CMakeLists.txt  LICENSE  README.md  SurfaceRegistration.cpp  algorithm.cpp  algorithm.h  main.cpp  preProcessing.cpp  preProcessing.h
common/: PCAStatistics.cpp  PCAStatistics.h  inputUtilities.cpp  inputUtilities.h  visualizationUtilities.cpp  visualizationUtilities.h
data/: brain-t.vtk  brain.vtk  bunny-t.vtp  bunny.vtp  example-transformed.vtk  example.vtk  mobius-1000-transformed.vtk  mobius-1000.vtk  mobius-300-transformed.vtk  mobius-300.vtk  mobius-500-transformed.vtk  mobius-500.vtk  mobius-800-transformed.vtk  mobius-800.vtk  mobius-transformed.vtk  mobius.vtk
