CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(LIB_DIRECTORY lib)
include_directories(${LIB_DIRECTORY})

SET(PROJECT_NAME cglab)

SET(SOURCE_FILES SurfaceRegistration.cpp)

SET(REQUIRED_VTK_LIBRARIES vtkRendering vtkHybrid vtkInfovis)

PROJECT(${PROJECT_NAME})

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "VTK should have been compiled with option VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${REQUIRED_VTK_LIBRARIES})
